syntax = "proto3";
option cc_enable_arenas = true;

package FederatedQuery.Internal;
option java_package = "com.yandex.query.internal";
option java_outer_classname = "YandexQueryInternalProtos";

import "ydb/core/fq/libs/config/protos/storage.proto";
import "ydb/core/fq/libs/protos/fq_private.proto";

import "ydb/public/api/protos/draft/fq.proto";
import "ydb/public/api/protos/ydb_issue_message.proto";

import "ydb/library/yql/dq/actors/protos/dq_status_codes.proto";
import "ydb/library/yql/dq/proto/dq_tasks.proto";
import "ydb/library/yql/providers/dq/api/protos/service.proto";

import "google/protobuf/duration.proto";

message Consumer {
    string name = 1;
}

message StatisticsNamedValue {
    string name = 1;
    int64 value = 2;
}

message QueryInternal {
    string token = 1;
    repeated NYql.NDqProto.TDqTask task = 2; // deprecated and should not be used, will be removed in future
    repeated Yql.DqsProto.TAttr settings = 3;
    repeated Consumer consumer = 4;
    repeated FederatedQuery.Connection connection = 5;
    repeated FederatedQuery.Binding binding = 6;
    FederatedQuery.QueryAction action = 7;
    string ast = 8; // deprecated and should not be used, will be removed in future
    ExecuteMode execute_mode = 9;
    StateLoadMode state_load_mode = 10;
    string cloud_id = 11;
    repeated Fq.Private.TopicConsumer created_topic_consumers = 12;
    repeated bytes dq_graph = 13; // deprecated: use dq_graph_compressed
    int32 dq_graph_index = 14;
    StreamingDisposition disposition = 15;
    uint64 result_limit = 16;
    google.protobuf.Duration execution_ttl = 17;
    Fq.Private.CompressedData ast_compressed = 18;
    Fq.Private.CompressedData plan_compressed = 19;
    repeated Fq.Private.CompressedData dq_graph_compressed = 20;
    Fq.Private.TaskResources resources = 21;
    repeated Ydb.Issue.IssueMessage internal_issue = 22;
    NYql.NDqProto.StatusIds.StatusCode status_code = 23;
    string operation_id = 24;
    string execution_id = 25;
    NFq.NConfig.TYdbStorageConfig compute_connection = 26;
    google.protobuf.Duration result_ttl = 27;
    NYql.NDqProto.StatusIds.StatusCode pending_status_code = 28;
    repeated StatisticsNamedValue statistics = 29;
}

message JobInternal {
    Fq.Private.CompressedData ast_compressed = 1;
    Fq.Private.CompressedData plan_compressed = 2;
    repeated Fq.Private.CompressedData dq_graph_compressed = 3;
}

message ConnectionInternal {
    string cloud_id = 2;
}

message BindingInternal {
    string cloud_id = 2;
}

message ComputeDatabaseInternal {
    string id = 1;
    NFq.NConfig.TYdbStorageConfig connection = 2;
    bool synchronized = 3;
}
